--- a/index.html
+++ b/index.html
@@ -87,12 +87,7 @@
                 <div class="about-grid">
                     <div class="about-image-wrapper" data-aos="fade-right" data-aos-duration="800">
                         <div class="about-image-container" id="aboutImageContainer">
-                            <img src="img/arjun-photo.jpg" alt="Arjun Kunwar" id="aboutPhoto" class="about-photo">
-                            <div class="photo-upload-placeholder hidden" id="photoPlaceholder">
-                                <i class="fa-solid fa-camera"></i>
-                                <p>Click to upload photo</p>
-                                <input type="file" id="photoUpload" accept="image/*" hidden>
-                            </div>
+                            <img src="image/profile.jpg" alt="Arjun Kunwar" class="about-photo">
                             <div class="image-border-decor"></div>
                         </div>
                     </div>
@@ -106,16 +101,14 @@
                         <div class="about-skills">
                             <h3 class="skills-title">Technologies I work with:</h3>
                             <ul class="skills-list">
-                                <ul class="skills-list">
-                                    <li><i class="fa-solid fa-caret-right"></i> React / Next.js</li>
-                                    <li><i class="fa-solid fa-caret-right"></i> Node.js / Express</li>
-                                    <li><i class="fa-solid fa-caret-right"></i> MongoDB</li>
-                                    <li><i class="fa-solid fa-caret-right"></i> TypeScript</li>
-                                    <li><i class="fa-solid fa-caret-right"></i> AWS (EC2, S3, Lambda)</li>
-                                    <li><i class="fa-solid fa-caret-right"></i> CloudFormation</li>
-                                    <li><i class="fa-solid fa-caret-right"></i> ShadCN UI / Tailwind</li>
-                                    <li><i class="fa-solid fa-caret-right"></i>Docker</li>
-                                </ul>
+                                <li><i class="fa-solid fa-caret-right"></i> React / Next.js</li>
+                                <li><i class="fa-solid fa-caret-right"></i> Node.js / Express</li>
+                                <li><i class="fa-solid fa-caret-right"></i> MongoDB</li>
+                                <li><i class="fa-solid fa-caret-right"></i> TypeScript</li>
+                                <li><i class="fa-solid fa-caret-right"></i> AWS (EC2, S3, Lambda)</li>
+                                <li><i class="fa-solid fa-caret-right"></i> CloudFormation</li>
+                                <li><i class="fa-solid fa-caret-right"></i> ShadCN UI / Tailwind</li>
+                                <li><i class="fa-solid fa-caret-right"></i> Docker</li>
                             </ul>
                         </div>
                     </div>
@@ -297,7 +290,7 @@
             </div>
         </section>
 
-      <!-- ═══════════════════ BLOG SECTION ═══════════════════ -->
+        <!-- ═══════════════════ BLOG SECTION ═══════════════════ -->
         <section id="blog" class="section blog-section">
             <div class="section-bg-animation"></div>
             <div class="container">
@@ -311,7 +304,6 @@
                     </button>
                 </div>
                 <div class="blog-grid" id="blogGrid">
-                    <!-- Blog cards will be rendered dynamically from localStorage -->
                     <article class="blog-card" data-aos="fade-up" data-aos-delay="100">
                         <div class="blog-card-image">
                             <div class="blog-card-tag">AWS Tutorial</div>
@@ -413,7 +405,7 @@
                                 <div class="contact-icon"><i class="fa-solid fa-envelope"></i></div>
                                 <div>
                                     <h4>Email</h4>
-                                    <a href="/cdn-cgi/l/email-protection#8beaf9e1fee5e0fee5fceaf9b3b3bfb3cbece6eae2e7a5e8e4e6"><span class="__cf_email__" data-cfemail="91f0e3fbe4fffae4ffe6f0e3a9a9a5a9d1f6fcf0f8fdbff2fefc">[email&#160;protected]</span></a>
+                                    <a href="mailto:arjunkunwar@example.com">arjunkunwar@example.com</a>
                                 </div>
                             </div>
                             <div class="contact-item">
@@ -427,7 +419,7 @@
                                 <div class="contact-icon"><i class="fa-solid fa-phone"></i></div>
                                 <div>
                                     <h4>Phone</h4>
-                                    <a href="tel:+1234567890">9818118327</a>
+                                    <a href="tel:+9779818118327">9818118327</a>
                                 </div>
                             </div>
                         </div>
@@ -476,7 +468,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="footer-content">
-                    <p class="footer-text">Designed &amp; Built </span> by
+                    <p class="footer-text">Designed &amp; Built by
                         <strong>Arjun Kunwar</strong>
                     </p>
                     <div class="footer-socials">
@@ -495,16 +487,10 @@
         <div class="toast-container" id="toastContainer"></div>
 
         <!-- ═══════════════════ SCRIPTS ═══════════════════ -->
-        <!-- Particles.js -->
-        <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-        <!-- Typed.js -->
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.16/dist/typed.umd.js"></script>
-        <!-- Vanilla Tilt -->
         <script src="https://cdn.jsdelivr.net/npm/vanilla-tilt@1.8.1/dist/vanilla-tilt.min.js"></script>
-        <!-- AOS -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-        <!-- Custom Script -->
         <script src="script.js"></script>
     </body>
 
